# AutoVehicle

./: .gitignore  COMPARE_ALGORITHMS.md  EXPERIMENT_LOG.md  GLOBAL_PATH_USAGE.md  README.md  experiment_results_template.csv  lidar확인  ubuntu_algorithm_compare.sh  메세지  실행  카메라확인
camera+lidar/: README.md  camera_monitor.py  front_camera_perception.py  front_camera_udp.py  lidar_manual.rviz  lidar_monitor.py  run_camera_monitor.sh  run_lidar_monitor.sh  run_lidar_rviz.sh  run_sensor_viewers.sh  실행방법
configs/: 11  22  44  README.md  network.yaml  operate  sensors.yaml  vehicle.yaml  제어명령
docs/: 00_project_master_plan.md  01_competition_constraints.md  02_system_architecture.md  03_ros_topic_plan.md  04_environment_setup.md  05_sensor_strategy.md  06_execution_checklist.md  07_report_template.md  08_next_implementation_steps.md  09_notion_workspace.md  10_current_environment_state.md  11_coordinate_and_stanley_plan.md  12_udp_bridge_plan.md  20_coordinate_convention.md  21_current_algorithm_summary.md
experiments/: README.md  stanley_experiment_template.md
ros_ws/: README.md  ubuntu전용
ros_ws/src/: README.md
ros_ws/src/morai_competition_bringup/: CMakeLists.txt  package.xml
ros_ws/src/morai_competition_bringup/launch/: autonomy.launch  competition.launch  gps_stanley_dry_run.launch  gps_stanley_udp_drive.launch  gps_waypoint_record.launch  logging.launch  rosbridge.launch  sensors.launch
ros_ws/src/yeoms_base_bridge/: CMakeLists.txt  package.xml
ros_ws/src/yeoms_bringup/: CMakeLists.txt  package.xml
ros_ws/src/yeoms_bringup/launch/: drive_pure_pursuit.launch  record_gps_path.launch
ros_ws/src/yeoms_control/: CMakeLists.txt  README.md  package.xml
ros_ws/src/yeoms_control/config/: stanley.yaml
ros_ws/src/yeoms_control/launch/: record_waypoints.launch  stanley_test.launch
ros_ws/src/yeoms_control/scripts/: stanley_controller.py  waypoint_origin.py  waypoint_recorder.py
ros_ws/src/yeoms_control/waypoints/: test_curve.csv  test_straight.csv  test_straight_slow.csv
ros_ws/src/yeoms_path_recorder/: CMakeLists.txt  package.xml
ros_ws/src/yeoms_pure_pursuit/: CMakeLists.txt  package.xml
ros_ws/src/yeoms_pure_pursuit/config/: pure_pursuit.yaml
ros_ws/src/yeoms_pure_pursuit/launch/: pure_pursuit.launch
ros_ws/src/yeoms_pure_pursuit/scripts/: pure_pursuit_controller.py
ros_ws/src/yeoms_udp_bridge/: CMakeLists.txt  README.md  package.xml
ros_ws/src/yeoms_udp_bridge/config/: udp_bridge.yaml
ros_ws/src/yeoms_udp_bridge/launch/: udp_bridge.launch  udp_gps_localization.launch  udp_imu.launch  udp_localization_guess.launch  udp_monitor.launch
ros_ws/src/yeoms_udp_bridge/scripts/: udp_ctrl_cmd_sender.py  udp_gps_to_localization.py  udp_imu_to_topic.py  udp_packet_monitor.py  udp_status_to_localization.py
ros_ws2/: README.md  UBUNTU_COMMANDS.md
ros_ws2/src/yeoms2_adaptive_pure_pursuit/: CMakeLists.txt  package.xml
ros_ws2/src/yeoms2_adaptive_pure_pursuit/config/: adaptive_pure_pursuit.yaml
ros_ws2/src/yeoms2_adaptive_pure_pursuit/launch/: adaptive_pure_pursuit.launch
ros_ws2/src/yeoms2_adaptive_pure_pursuit/scripts/: pure_pursuit_controller.py
ros_ws2/src/yeoms2_base_bridge/: CMakeLists.txt  package.xml
ros_ws2/src/yeoms2_bringup/: CMakeLists.txt  package.xml
ros_ws2/src/yeoms2_bringup/launch/: drive_adaptive_pure_pursuit.launch  record_gps_path.launch
ros_ws2/src/yeoms2_path_recorder/: CMakeLists.txt  package.xml
ros_ws3/: README.md  UBUNTU_COMMANDS.md
ros_ws3/src/yeoms3_base_bridge/: CMakeLists.txt  package.xml
ros_ws3/src/yeoms3_base_bridge/config/: base_bridge.yaml
ros_ws3/src/yeoms3_base_bridge/launch/: ctrl_cmd_sender.launch  gps_localization.launch
ros_ws3/src/yeoms3_base_bridge/scripts/: ctrl_cmd_sender.py
ros_ws3/src/yeoms3_bringup/: CMakeLists.txt  package.xml
ros_ws3/src/yeoms3_bringup/launch/: drive_stanley.launch  record_gps_path.launch
ros_ws3/src/yeoms3_path_recorder/: CMakeLists.txt  package.xml
ros_ws3/src/yeoms3_path_recorder/launch/: record_path.launch
ros_ws3/src/yeoms3_path_recorder/scripts/: path_recorder.py
ros_ws3/src/yeoms3_stanley/: CMakeLists.txt  package.xml
ros_ws3/src/yeoms3_stanley/config/: stanley.yaml
ros_ws3/src/yeoms3_stanley/launch/: stanley.launch
ros_ws3/src/yeoms3_stanley/scripts/: stanley_controller.py
ros_ws4/: README.md  UBUNTU_COMMANDS.md
ros_ws4/src/yeoms4_bringup/: CMakeLists.txt  package.xml
ros_ws4/src/yeoms4_bringup/launch/: drive_hybrid.launch  record_gps_path.launch
ros_ws_camera/: README.md  SENSOR_RULES.md  UBUNTU_COMMANDS.md
ros_ws_camera/src/yeoms_camera_bridge/: CMakeLists.txt  package.xml
ros_ws_camera/src/yeoms_camera_bridge/config/: camera_bridge.yaml
ros_ws_camera/src/yeoms_camera_bridge/launch/: camera_udp_receiver.launch  multi_camera_udp_receiver.launch
ros_ws_camera/src/yeoms_camera_bridge/scripts/: camera_udp_receiver.py
ros_ws_camera/src/yeoms_camera_bringup/: CMakeLists.txt  package.xml
ros_ws_camera/src/yeoms_camera_bringup/launch/: camera_perception.launch  camera_udp_only.launch  multi_camera_udp_only.launch
ros_ws_lidar/: README.md  SENSOR_RULES.md  UBUNTU_COMMANDS.md
ros_ws_lidar/src/yeoms_lidar_bridge/: CMakeLists.txt  package.xml
ros_ws_lidar/src/yeoms_lidar_bridge/config/: lidar_bridge.yaml
ros_ws_lidar/src/yeoms_lidar_bridge/launch/: vlp16_udp_receiver.launch
ros_ws_lidar/src/yeoms_lidar_bridge/scripts/: vlp16_udp_receiver.py
ros_ws_lidar/src/yeoms_lidar_bringup/: CMakeLists.txt  package.xml
ros_ws_lidar/src/yeoms_lidar_bringup/launch/: lidar_obstacle_perception.launch  lidar_udp_only.launch
ros_ws_lidar/src/yeoms_lidar_perception/: CMakeLists.txt  package.xml
ros_ws_lidar/src/yeoms_lidar_perception/config/: lidar_obstacle.yaml
ros_ws_lidar/src/yeoms_lidar_perception/launch/: lidar_obstacle_detector.launch
ros_ws_lidar/src/yeoms_lidar_perception/scripts/: lidar_obstacle_detector.py
run+camera/: README.md  camera_behavior.py  front_camera_debug.py  morai_pure_pursuit_camera_udp.py  run_camera.sh
scripts/: README.md  bashrc_snippet.sh  check_topics.sh  preflight_check.sh  run_competition.sh
(+24 files in other folders)
