<?xml version="1.0"?>
<package format="2">
  <name>morai_competition_bringup</name>
  <version>0.1.0</version>
  <description>Launch files for the MORAI AI convergence autonomous driving competition stack.</description>

  <maintainer email="team@example.com">MORAI Competition Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>roslaunch</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>

  <export>
  </export>
</package>

