<?xml version="1.0"?>
<package format="2">
  <name>yeoms_bringup</name>
  <version>0.1.0</version>
  <description>Launch files for the fresh MORAI baseline.</description>
  <maintainer email="team@example.com">MORAI Competition Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>yeoms_base_bridge</exec_depend>
  <exec_depend>yeoms_path_recorder</exec_depend>
  <exec_depend>yeoms_pure_pursuit</exec_depend>
</package>
