<?xml version="1.0"?>
<package format="2">
  <name>yeoms2_adaptive_pure_pursuit</name>
  <version>0.1.0</version>
  <description>Adaptive Pure Pursuit path follower with curvature, cross-track, and speed adaptation.</description>
  <maintainer email="team@example.com">MORAI Competition Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
</package>
