<?xml version="1.0"?>
<package format="2">
  <name>yeoms2_bringup</name>
  <version>0.1.0</version>
  <description>Launch files for the adaptive Pure Pursuit comparison workspace.</description>
  <maintainer email="team@example.com">MORAI Competition Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>yeoms2_base_bridge</exec_depend>
  <exec_depend>yeoms2_path_recorder</exec_depend>
  <exec_depend>yeoms2_adaptive_pure_pursuit</exec_depend>
</package>
