<?xml version="1.0"?>
<package format="2">
  <name>yeoms3_bringup</name>
  <version>0.1.0</version>
  <description>Launch files for the Stanley comparison workspace.</description>
  <maintainer email="team@example.com">MORAI Competition Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>yeoms3_base_bridge</exec_depend>
  <exec_depend>yeoms3_path_recorder</exec_depend>
  <exec_depend>yeoms3_stanley</exec_depend>
</package>
