<?xml version="1.0"?>
<package format="2">
  <name>yeoms4_bringup</name>
  <version>0.1.0</version>
  <description>Launch files for the Stanley and Pure Pursuit hybrid comparison workspace.</description>
  <maintainer email="team@example.com">MORAI Competition Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>yeoms4_base_bridge</exec_depend>
  <exec_depend>yeoms4_path_recorder</exec_depend>
  <exec_depend>yeoms4_hybrid_controller</exec_depend>
</package>
