<?xml version="1.0"?>
<package format="2">
  <name>yeoms_lidar_bridge</name>
  <version>0.1.0</version>
  <description>MORAI VLP16 UDP receiver that publishes ROS PointCloud2.</description>
  <maintainer email="team@example.com">MORAI Competition Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
