<?xml version="1.0"?>
<package format="2">
  <name>yeoms_lidar_bringup</name>
  <version>0.1.0</version>
  <description>Launch files for MORAI LiDAR perception experiments.</description>
  <maintainer email="team@example.com">MORAI Competition Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>yeoms_lidar_bridge</exec_depend>
  <exec_depend>yeoms_lidar_perception</exec_depend>
</package>
